# learn-cpp

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  async_example  cmake_install.cmake  condition_variable_example  future_promise_example  multithreading  mutex_example
_codeql_build_dir/src/benchmarking/: Makefile  cmake_install.cmake  macro_benchmark  micro_benchmark  partial_benchmark
cpp-sockets-project/: CMakeLists.txt  README.md
cpp-sockets-project/src/socket/: main.cpp
sockets-project/: CMakeLists.txt
sockets-project/src/: client.cpp  server.cpp
src/: CMakeLists.txt  async_example.cpp  condition_variable_example.cpp  future_promise_example.cpp  multithreading.cpp  mutex_example.cpp  solidity.sol  thread.cpp  typename.cpp  virtual.cpp
src/allocator/: 01_std_allocator.cpp  02_custom_allocator.cpp  03_arena_allocator.cpp  04_pmr_allocator.cpp  05_combining_containers.cpp  CMakeLists.txt  README.md
src/benchmark/: mybenchmark.cc
src/benchmarking/: CMakeLists.txt  macro_benchmark.cpp  micro_benchmark.cpp  partial_benchmark.cpp
src/boost/: README.md  boost_asio_async.cpp  boost_compute.cpp  boost_fiber.cpp  boost_lockfree.cpp  boost_mpi.cpp  boost_thread.cpp
src/chatgpt/: lockfree_stack_example.cpp
src/cp/: asdf.cpp  class.cpp  exp.cpp  main.cpp  main2.cpp  q.cpp  test.cpp
src/epoll/: epollin.cpp  epollout.cpp
src/example_template/: c.cpp  header.h  impl.cpp
src/gemini/: lock_free_data_structure.cpp
src/ipc/: CMakeLists.txt  README.md
src/ipc/message_queue/: receiver.cpp  sender.cpp
src/ipc/named_pipe/: reader.cpp  writer.cpp
src/ipc/pipe/: pipe_example.cpp
src/ipc/shared_memory/: reader.cpp  writer.cpp
src/ipc/unix_socket/: client.cpp  server.cpp
src/ipc_fd/: CMakeLists.txt  README.md
src/ipc_fd/epoll_ipc/: epoll_example.cpp
src/ipc_fd/fd_passing/: receiver.cpp  sender.cpp
src/ipc_fd/select_ipc/: select_example.cpp
src/issues/: deadlock.cpp
src/linkage/: static.cpp
src/python_binding/: CMakeLists.txt  module.cpp  test.py
src/socket/: main.cpp
src/socket_gfg/: server.cpp
src/thread/: threadpool.cpp
src/variadic/: README.md  c_style_variadics.cpp  template_variadics.cpp
